--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 BRAIDE JESSE OBELEM <ibbraidejesse@gmail.com>
-# Please replace this line with your details like mine <>
+TOSIN TIMOTHY OWOEYE <towoeye50@gmail.com>
